wp-content/themes/petsonbreak/css/style.css
/* ... */
.menu-bar.nav-tabs>li>a {
    border: none;
    border-radius: 0px;
}
.nav-tabs.menu-bar {
    border: none;
}

/*over-riding Bootstrap Navbar*/
#categories.nav-tabs {
    display: inline-flex;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
}
.navbar .navbar-nav {
  display: inline-block;
  float: none;
  vertical-align: top;
}
.navbar .navbar-collapse {
  text-align: center;
}
.navbar.navbar-default {
    margin-bottom: 0;
    position: fixed;
    border-radius: 0;
    width: 100%;
    border-color: transparent;
    background-color: #636;
}
.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
    color: #fff;
    background-color: transparent;
}
.navbar-default .navbar-nav>li>a {
    color: #fff;
    cursor: pointer;
    text-transform: uppercase;
}
.navbar-default .navbar-nav>.dropdown>a:hover .caret, .navbar-default .navbar-nav>.dropdown>a:focus .caret {
    border-top-color: #fff;
    border-bottom-color: #fff;
}

/*over riding container width and including flex*/
/* tabing for search in homepage */
div.container_width {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80em;
}
div#searchbox {
    display: flex;
    padding: 15px;
}
.input-group-addon {
    width: 8em;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2.5em;
}
#categories.nav-tabs>li>a {
    color: #000;
    font-weight: bold;
    text-transform: uppercase;
}
#categories.nav-tabs>li.active>a, #categories.nav-tabs>li.active>a:hover, #categories.nav-tabs>li.active>a:focus {
    color: #ff372f
}
.home-slider-offer-title {
    text-align: center;
    color: white;
}
div.home-slider-offer.desc {
    width: 100%;
    background-color: rgba(0, 0, 0, 0.51);
}

/*Styles for Heading and Description for homepage carousel*/
.offer-description {display: flex;flex-direction: column;justify-content: center;align-items: center;margin: 6em 1em;}
.offer-heading { margin-bottom: 4rem;}
.offer-content {color: #808080; font-size: 24px;font-weight: 500;}
.pets-number {color: red;}

/*Over riding Carousel Control Style*/
div.category-slides {
    width: 100%;
    height: 30rem;
}
a.carousel-control[href="#servicesCarousel"] {
    width: 0%;
}
a.carousel-control[href="#servicesCarousel"] span.glyphicon.glyphicon-chevron-right {
    right: 1em;
    color: gray;
    font-size: 35px;
}
a.carousel-control[href="#servicesCarousel"] span.glyphicon.glyphicon-chevron-left {
    left: -2em;
    color: gray;
    font-size: 35px;
    right: -1em;
}
/*About Us Style*/

.about-us-section {
    background: white;
    position: relative;
}
.about-image-container,
.about-us-description {
    margin-left: 23%;
    width: 44%;
    margin-top: 24%;
}
.about-description-container {
    background-image: url(http://dev.petsonbreak.com/wp-content/uploads/2017/08/about-us-section.png);
    background-size: 54em;
    height: 76em;
    background-position: left;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
}
.about-us-heading {
    margin-bottom: 14px;
}
.about-us-description p {
    line-height: 1.5;
    text-align: justify;
    font-size: 14px;
    margin-bottom: 10px;
}
.about-us-image {
    width: 40%;
}

/*Testimonial Slider Over riding*/
.testimonial-container {
    margin-top: 5em;
    position: relative;
}
.testimonial-container > p {
    font-size: 24px;
    text-align: center;
    margin-bottom: 3rem;
    font-weight: 600;
}
#testimonial-slider:before {
    content: '';
    background-color: #636;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: .5; 
}
#testimonial-slider {
    background: #643364;
    padding: 2.5rem 0;
    background-image: url(http://dev.petsonbreak.com/wp-content/uploads/2017/05/nathalia-bariani-100947.jpg);
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}
.testimonial-section img{
    border-radius: 100%;
    width: 38rem;
    height: 38rem;
    margin-left: 20rem;
    transform: scale(0.8);
}
.testimony-content {
    color: white;
    margin: 3rem 1em;
}
.testimony-person-name {
    margin-bottom: 1rem;
    font-size: 2.5rem;
}
.testimony-stars .glyphicon.glyphicon-star {
    color: yellow;
    font-size: 25px;
    margin-bottom: 1rem;
}
.testimony-description {
    font-style: italic;
    line-height: 2.2;
    font-size: 14px;
    text-align: justify;
}
.testimonial-slider.glyphicon {
    font-size: 60px;
}

/*Events & News Container Styles*/
.events-news-container {
    margin: 5rem 0;
    color: black;
}
.news-container {
    height: 250px;
    overflow-y: auto;
}
.events-section-heading, .news-section-heading {
    text-align: center;
    font-size: 3rem;
    font-weight: 500;
    margin-bottom: 2rem;
}
.news-column {
    border-left: 1px solid #ccc;
}
.whole-news {
    margin-left: 5rem;
}
.each-news .glyphicon.glyphicon-play {
    margin-right: 1rem;
    color: yellow;
}
.each-news {
    margin-bottom: 1rem;
}


/*Footer Styles*/

.offers-footer-container {
    background-image: url(http://dev.petsonbreak.com/wp-content/uploads/2017/08/restaurant-offer-bg-blu.png);
    padding: 5em 0;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    color: white;
}
.offers-footer-container div {
    margin-bottom: 2em;
}
.offers-footer-heading span {
    font-weight: bold;
    font-size: 2vw;
    font-style: italic;
}
.offers-footer-details {
    
}
.offers-footer-button button {
    border: 1px solid white;
    background: #636;
    color: white;
    width: 10em;
    height: 3em;
    border-radius: 20px;
}
/* ... */

